adding error message and type

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <button id="buttonTest">Click here to write to log</button>
+    <button id="errorButton">This will trigger error log</button>
+    <div id="result"></div>
     <script src="client.js" type="module"></script>
 </body>
 </html>
